# ironhee_ml_learning

./: README.md
deep-learning/: README.md  requirements.txt
deep-learning/notebook/: tenserflow_multiclass_classification.ipynb  tenserflow_tutorial.ipynb
gradient_descendent_for_logistic_regression/: Cargo.toml  README.md
gradient_descendent_for_logistic_regression/src/: data_loader.rs  main.rs  model.rs  plot.rs  training.rs
gradient_descendent_for_multiple_linear_regression/: Cargo.toml  README.md
gradient_descendent_for_multiple_linear_regression/src/: data_loader.rs  main.rs  model.rs  training.rs
gradient_descendent_for_univariate_linear_regression/: Cargo.toml  README.md
gradient_descendent_for_univariate_linear_regression/src/: main.rs
