[package]
name = "ml-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
plotters = "0.3.3"
rand = "0.8.5"
nalgebra = {version ="0.31.2"}
approx = "0.5.1"
csv = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
debug = 2